Class/docker (#8)
* add dockr examples

* add Docker examples

* add toread

* cleanup

* update docs for class 7

* correct docker docs

* udpate docker class docs

* update docs on docker

* finish docker class